--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
 																	style="margin: 0; color: #fdecc0; direction: ltr; font-family: Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif; font-size: 22px; font-weight: 700; letter-spacing: normal; line-height: 150%; text-align: left; margin-top: 0; margin-bottom: 0;">
 																	<span class="tinyMce-placeholder">&nbsp; &nbsp;
 																		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-																		&nbsp; &nbsp; &nbsp; 澄毅半導體的客您好，</span></h1>
+																		&nbsp; &nbsp; &nbsp; 澄毅半導體的客戶您好，</span>
+																</h1>
 															</td>
 														</tr>
 													</table>
@@ -257,8 +258,9 @@
 																			style="margin: 0; font-size: 22px; text-align: left;">
 																			<strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 																				&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-																				&nbsp; &nbsp; &nbsp; 澄毅半導體 &nbsp; &nbsp;
-																				<strong>敬祝&nbsp; </strong></strong></p>
+																				&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;
+																				<strong>敬祝&nbsp; </strong></strong>
+																		</p>
 																		<p dir="ltr"
 																			style="margin: 0; font-size: 22px; text-align: center; mso-line-height-alt: 18px;">
 																			&nbsp;</p>
@@ -266,6 +268,18 @@
 																			style="margin: 0; font-size: 22px; text-align: center; mso-line-height-alt: 33px;">
 																			<span style="font-size:22px;"><strong><span
 																						style>中秋佳節愉快</span></strong></span>
+																		</p>
+																		<p dir="ltr"
+																			style="margin: 0; text-align: center; font-size: 22px; mso-line-height-alt: 18px;">
+																			&nbsp;</p>
+																		<p dir="ltr"
+																			style="margin: 0; font-size: 22px; text-align: right;">
+																			<strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+																				&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+																				&nbsp; &nbsp; &nbsp; 澄毅半導體 &nbsp; &nbsp;
+																				<strong>Andy
+																					Ku&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+																				</strong></strong>
 																		</p>
 																		<p dir="ltr"
 																			style="margin: 0; text-align: center; font-size: 22px; mso-line-height-alt: 18px;">
@@ -339,7 +353,8 @@
 																	style="margin: 0; color: #fdecc0; direction: ltr; font-family: Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif; font-size: 38px; font-weight: 700; letter-spacing: 2px; line-height: 150%; text-align: left; margin-top: 0; margin-bottom: 0;">
 																	<span
 																		class="tinyMce-placeholder">澄毅半導體的客戶&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[company]&nbsp;
-																		您好，</span></h1>
+																		您好，</span>
+																</h1>
 															</td>
 														</tr>
 													</table>
@@ -356,23 +371,28 @@
 																	style="color:#fdecc0;direction:ltr;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;font-size:16px;font-weight:400;letter-spacing:0px;line-height:120%;text-align:left;mso-line-height-alt:19.2px;">
 																	<p dir="ltr"
 																		style="margin: 0; margin-bottom: 11px;">
-																		<strong>在最美的季節裡，</strong></p>
+																		<strong>在最美的季節裡，</strong>
+																	</p>
 																	<p dir="ltr"
 																		style="margin: 0; margin-bottom: 11px;">
 																		<strong>遇見最美的秋天</strong><br><br><strong>在最優質的科技裡，</strong>
 																	</p>
 																	<p dir="ltr"
 																		style="margin: 0; margin-bottom: 11px;">
-																		<strong>澄毅幸運遇見最佳的您</strong></p>
+																		<strong>澄毅幸運遇見最佳的您</strong>
+																	</p>
 																	<p dir="ltr"
 																		style="margin: 0; margin-bottom: 11px;">
-																		<strong>相識相知的緣分，</strong></p>
+																		<strong>相識相知的緣分，</strong>
+																	</p>
 																	<p dir="ltr"
 																		style="margin: 0; margin-bottom: 11px;">
-																		<strong>真誠以待的合作</strong></p>
+																		<strong>真誠以待的合作</strong>
+																	</p>
 																	<p dir="ltr"
 																		style="margin: 0; margin-bottom: 11px;">
-																		<strong>感謝有您，敬祝中秋佳節愉快!</strong></p>
+																		<strong>感謝有您，敬祝中秋佳節愉快!</strong>
+																	</p>
 																	<p dir="ltr"
 																		style="margin: 0; margin-bottom: 11px;">&nbsp;
 																	</p>
@@ -470,7 +490,8 @@
 																		<p
 																			style="margin: 0; font-size: 12px; text-align: center;">
 																			<span style="font-size:18px;">Collaborate
-																				with MKS，the Key to Success!</span></p>
+																				with MKS，the Key to Success!</span>
+																		</p>
 																	</div>
 																</div>
 															</td>
@@ -522,7 +543,8 @@
 																		<p
 																			style="margin: 0; font-size: 12px; text-align: center;">
 																			<span style="font-size:12px;">Collaborate
-																				with MKS，the Key to Success!</span></p>
+																				with MKS，the Key to Success!</span>
+																		</p>
 																	</div>
 																</div>
 															</td>
